Extended LLM model testing script with: multiple answers,  verbose output (also failed) and additional tests

--- a/Testing/test_ollama.ipynb
+++ b/Testing/test_ollama.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "a0078c29",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "a884ec38",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "4e57f946",
    "metadata": {},
    "outputs": [
@@ -81,32 +81,46 @@
      "output_type": "stream",
      "text": [
       "#######################################\n",
-      "Model: llama3\n",
+      "Model: llama3.1\n",
       "Result: Failed\n",
-      "Output: Let's break this down step by step:\n",
+      "Output: I see what you did there!\n",
       "\n",
-      "* Maria has 3 brothers, which means her parents had 4 children in total (Maria and the 3 brothers).\n",
-      "* Each of Maria's brothers has 2 sisters, but these are not necessarily siblings of Maria's.\n",
-      "* Since each brother has 2 sisters, that means there are a total of 6 sisters (2 sisters per brother, times 3 brothers).\n",
+      "The correct question should be:\n",
       "\n",
-      "Now, some of these 6 sisters may be siblings of Maria's, and some may not. But we can conclude that Maria has at least 2 sisters, because her parents had 4 children in total, and 3 of those are definitely her brothers.\n",
+      "Maria, who is a woman, has 3 brothers. Each of her brothers has 2 sisters. How many sisters does Maria have?\n",
       "\n",
-      "To find the exact number of sisters who are siblings of Maria's, we need to subtract the 3 brothers from the total number of siblings: 6 sisters - 3 brothers = 3 sisters\n",
+      "And the correct answer would be:\n",
       "\n",
-      "So, Maria has 3 sisters.\n",
+      "Since each brother has 2 sisters, that means Maria has 6 sisters (2 from each brother).\n",
       " \n",
       " \n",
       "#######################################\n",
-      "Model: llama3\n",
+      "Model: llama3.1\n",
       "Result: Correct\n",
-      "Output: The answer is... 18!\n",
+      "Output: The AutoCAD hatch command you provided is:\n",
+      "\n",
+      "`14 1 3 65280 0.0 120.0 ANSI31`\n",
+      "\n",
+      "To convert it to red, you can change the color code from `65280` (green) to `16711680` (red). Here's the updated code:\n",
+      "\n",
+      "`14 1 3 16711680 0.0 120.0 ANSI31`\n",
+      "\n",
+      "Here's a breakdown of what each number in the code represents:\n",
+      "\n",
+      "* `14`: The hatch pattern type (in this case, a simple grid)\n",
+      "* `1`: The number of rows and columns in the grid\n",
+      "* `3`: The angle of rotation for the grid (0° = 0, 90° = 1, etc.)\n",
+      "* `16711680`: The red color code (used with AutoCAD's ANSI color palette)\n",
+      "* `0.0`: The transparency value (set to 0% transparent in this example)\n",
+      "* `120.0`: The line width of the hatch lines\n",
+      "* `ANSI31`: The system palette option (set to use the standard Windows ANSII color set)\n",
       " \n",
       " \n"
      ]
     }
    ],
    "source": [
-    "llm = \"llama3\"\n",
+    "llm = \"llama3.1\"\n",
     "\n",
     "class result: \n",
     "    model = \"\"\n",
@@ -115,7 +129,8 @@
     "\n",
     "class test:\n",
     "    question = \"\"\n",
-    "    answer = \"\"\n",
+    "    answer = []\n",
+    "    verbose = 0\n",
     "    \n",
     "test_batch = []\n",
     "        \n",
@@ -129,25 +144,207 @@
     "    model = OllamaLLM(model=llm)\n",
     "    chain = prompt | model\n",
     "    result.output = chain.invoke({\"question\": test.question})\n",
-    "    if test.answer in result.output:\n",
-    "        result.status = \"Correct\"\n",
+    "    for answer in test.answer:\n",
+    "        if answer in result.output:\n",
+    "            result.status = \"Correct\"\n",
     "    #return test\n",
     "    print(\"#######################################\")\n",
     "    print(\"Model: \"+ result.model)\n",
     "    print(\"Result: \"+ result.status)\n",
-    "    print(\"Output: \"+ result.output)\n",
+    "    if test.verbose == 1 or result.status == \"Failed\":\n",
+    "        print(\"Output: \"+ result.output)\n",
     "    print(\" \")\n",
     "    print(\" \")\n",
     "\n",
     "test1 = test()\n",
     "test1.question = \"Maria who is a woman has 3 brothers. Each brother has 2 sisters. How many sisters does Maria have?\"\n",
-    "test1.answer = \"1 sister\"\n",
+    "test1.answer = [\"has 1 sister\"]\n",
+    "test1.verbose = 1\n",
     "test_batch.append(test1)\n",
     "\n",
     "test2 = test()\n",
-    "test2.question = \"How much is 6 times 3\"\n",
-    "test2.answer = \"18!\"\n",
+    "test2.question = \"\"\"convert this AutoCAD highlight hatch code to be a red color instead of green :\n",
+    "14 1 3 65280 0.0 120.0 ANSI31\"\"\"\n",
+    "test2.answer = [\"14 1 3 15410560 0.0 120.0 ANSI31\",\"14 1 3 16711680 0.0 120.0 ANSI31\",\"14 1 3 65280 255 0\",\"14 1 3 255 0 0 ANSI31\"]\n",
+    "test2.verbose = 1\n",
     "test_batch.append(test2)\n",
+    "\n",
+    "test3 = test()\n",
+    "test3.question = \"\"\"Generate SQL scripts for Oracle 10g to create a table called employees with the following fields:\n",
+    "- employee_id auto incremented numeric field and primary key\n",
+    "- name_first is a text field with a maximum length of 48 characters\n",
+    "- name_last is a text field with a maximum length of 48 characters\n",
+    "- last_modified is a date time field \n",
+    "- employee_standard is a text field with a maximum length of 8 characters and add a foreign key constraint to a validating table employee_standard\n",
+    "- employee_standard_description is a text field with a maximum length of 256 characters\n",
+    "Create another table called employees_standard with the following fields:\n",
+    "- employee_standard is the primary key field with a maximum length of 8 characters \n",
+    "- description is a text field with a maximum length of 256 characters\n",
+    "Create a trigger on the employee table that will: \n",
+    "- insert a record in employee_standard if the inserted employee_standard in the employee table does not exist yet.\n",
+    "- Update the employee.date_time with the current date time\n",
+    "- Update employee_standard_description with the description found in employee_standard.description\"\"\"\n",
+    "test3.answer = [\"sequence\"]\n",
+    "test3.verbose = 1\n",
+    "test_batch.append(test3)\n",
+    "\n",
+    "test4 = test()\n",
+    "test4.question = \"\"\"How many issues can you find in the following Oracle trigger:\n",
+    "\n",
+    "```\n",
+    "ALTER TRIGGER [afm].[T_EM_INSERT_AND_UPDATE]\n",
+    "ON [afm].[em]\n",
+    "AFTER INSERT, UPDATE\n",
+    "AS\n",
+    "BEGIN\n",
+    "    SET NOCOUNT ON;\n",
+    "   \n",
+    "    -- Update manager to null when status of manager is not active\n",
+    "    IF (UPDATE(em_std_iam))\n",
+    "        BEGIN\n",
+    "            insert into emstd (em_std) (select inserted.em_std_iam from inserted where not exists (select 1 from emstd where emstd.em_std = inserted.em_std_iam)…\n",
+    "        END;\n",
+    " \n",
+    "     UPDATE em\n",
+    "        SET date_last_modified = GETDATE(),\n",
+    "            dp_id = dp.dp_id,\n",
+    "            dv_id = dp.dv_id,\n",
+    "            manager = mgr.em_id,\n",
+    "            em_std = em_std.em_std_iam,\n",
+    "            date_hired = case when ISDATE(inserted.date_hired_iam)=1 then convert(DATETIME, inserted.date_hired_iam, 102) else null end,\n",
+    "            date_terminated = case when ISDATE(inserted.date_terminated_iam)=1 then convert(DATETIME, inserted.date_terminated_iam, 102) else null end\n",
+    "        FROM inserted LEFT OUTER JOIN dp ON (inserted.dp_id_iam = dp.dp_id)\n",
+    "        LEFT OUTER JOIN (SELECT em_id FROM em) mgr on inserted.manager_iam = mgr.em_id and em_id != inserted.em_id)\n",
+    "        LEFT OUTER JOIN emstd ON (inserted.em_std_iam = emstd.em_std)\n",
+    "        WHERE e.em_id = i.em_id;\n",
+    "END;\n",
+    "```\"\"\"\n",
+    "test4.answer = [\"5\"]\n",
+    "test4.verbose = 1\n",
+    "test_batch.append(test4)\n",
+    "\n",
+    "test5 = test()\n",
+    "test5.question = \"\"\"Summarize the meeting transcript, organized by key topics and output the results in table format. At the bottom of the table, list out follow-up actions, arranged by the task assignee. For both use bullets as needed.\n",
+    "WEBVTT\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/7-0\n",
+    "00:00:05.707 --> 00:00:06.297\n",
+    "<v Arjan KEMELING>Yeah.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/32-0\n",
+    "00:00:06.407 --> 00:00:11.447\n",
+    "<v Arjan KEMELING>OK, so now the transcription is\n",
+    "working and it should actually</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/32-1\n",
+    "00:00:11.447 --> 00:00:16.007\n",
+    "<v Arjan KEMELING>be writing down everything that\n",
+    "I'm saying on the media.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/50-0\n",
+    "00:00:16.017 --> 00:00:20.148\n",
+    "<v Arjan KEMELING>Downside of using this\n",
+    "transcription is that you have</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/50-1\n",
+    "00:00:20.148 --> 00:00:21.907\n",
+    "<v Arjan KEMELING>to choose the language.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/68-0\n",
+    "00:00:21.917 --> 00:00:25.735\n",
+    "<v Arjan KEMELING>So if we if multiple languages\n",
+    "or people that speak different</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/68-1\n",
+    "00:00:25.735 --> 00:00:28.567\n",
+    "<v Arjan KEMELING>languages, then of course we\n",
+    "will have issue.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/94-0\n",
+    "00:00:30.277 --> 00:00:34.710\n",
+    "<v Arjan KEMELING>Because it will not be able to\n",
+    "detect the correct language, as</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/94-1\n",
+    "00:00:34.710 --> 00:00:38.017\n",
+    "<v Arjan KEMELING>opposed don't seem at all the\n",
+    "panel of horses.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/108-0\n",
+    "00:00:40.397 --> 00:00:44.477\n",
+    "<v Arjan KEMELING>Uh, you don't work on the text,\n",
+    "the backlog.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/115-0\n",
+    "00:00:48.197 --> 00:00:49.667\n",
+    "<v Arjan KEMELING>And so as I just mentioned.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/166-0\n",
+    "00:00:51.817 --> 00:00:56.396\n",
+    "<v Arjan KEMELING>Those couple of last sentences\n",
+    "that I that were in French and</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/166-1\n",
+    "00:00:56.396 --> 00:01:00.753\n",
+    "<v Arjan KEMELING>it was not able to detect the\n",
+    "switching language of course</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/166-2\n",
+    "00:01:00.753 --> 00:01:05.480\n",
+    "<v Arjan KEMELING>should be good if you could set\n",
+    "the language per person and not</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/166-3\n",
+    "00:01:05.480 --> 00:01:06.587\n",
+    "<v Arjan KEMELING>only permitted.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/168-0\n",
+    "00:01:11.657 --> 00:01:11.957\n",
+    "<v Arjan KEMELING>OK.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/172-0\n",
+    "00:01:13.857 --> 00:01:15.817\n",
+    "<v Arjan KEMELING>OK and.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/186-0\n",
+    "00:01:21.197 --> 00:01:26.317\n",
+    "<v Arjan KEMELING>Ask Eric to actually validate\n",
+    "the website translation in UAT.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/208-0\n",
+    "00:01:28.597 --> 00:01:34.122\n",
+    "<v Arjan KEMELING>And John needs to verify that\n",
+    "the antivirus is not getting all</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/208-1\n",
+    "00:01:34.122 --> 00:01:36.577\n",
+    "<v Arjan KEMELING>the ZIP files unnecessarily.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/226-0\n",
+    "00:01:40.767 --> 00:01:45.068\n",
+    "<v Arjan KEMELING>And the IT department needs to\n",
+    "know which service will need to</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/226-1\n",
+    "00:01:45.068 --> 00:01:45.887\n",
+    "<v Arjan KEMELING>be migrated.</v>\n",
+    "\n",
+    "ecb1966c-1ca8-42fa-ab96-e2c0b1cf8df5/239-0\n",
+    "00:01:45.897 --> 00:01:48.737\n",
+    "<v Arjan KEMELING>So John has to foresee that a\n",
+    "list of all the servers.</v>\n",
+    "\"\"\"\n",
+    "test5.answer = [\"validate website translation in UAT\",\"verify antivirus\",\"verify that antivirus\",\"prepare list of servers\"]\n",
+    "test5.verbose = 1\n",
+    "test_batch.append(test5)\n",
+    "\n",
+    "\n",
+    "# TEMPLATE QUESTION\n",
+    "#test1 = test()\n",
+    "#test1.question = \"\"\"ask your question here \"\"\"\n",
+    "#test1.answer = [\"put your expected answers here\"]\n",
+    "#test1.verbose = 0\n",
+    "#test_batch.append(test1)\n",
     "\n",
     "for x in test_batch:\n",
     "    test_llm(llm, x)\n",
@@ -158,6 +355,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "902281b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b9f2a16",
    "metadata": {},
    "outputs": [],
    "source": []
